--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,54 @@
-<h1>Title</h1>
-<a href="#" id="lnkPropBagAdmin">Property Bag Admin</a>
-<script src="scripts/popup.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            min-width: 600px;
+        }
+        
+        .navbar {
+            margin-bottom: 20px;
+        }
+    </style>
+
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img alt="Brand" src="/images/icon-19.png">
+                    </a>
+                </div>
+            </div>
+        </nav>
+        <h1>Hello, world!</h1>
+
+
+    </div>
+
+
+    <a href="#" id="lnkPropBagAdmin">Property Bag Admin</a>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="scripts/popup.js"></script>
+
+</body>
+
+</html>
