--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,23 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
     <!-- Bootstrap -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             padding-top: 20px;
             padding-bottom: 20px;
-            min-width: 600px;
+            min-width: 300px;
         }
         
         .navbar {
             margin-bottom: 20px;
         }
+        
+        .navbar-brand>img {
+            display: inline-block;
+        }
     </style>
-
 </head>
 
 <body>
@@ -29,26 +27,29 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">
+                    <div class="navbar-brand" href="#">
                         <img alt="Brand" src="/images/icon-19.png">
-                    </a>
+                        <span>SharePoint Admin Panel</span>
+                    </div>
+
                 </div>
             </div>
         </nav>
-        <h1>Hello, world!</h1>
-
-
+        <div class="row">
+            <div class="col-md-4">
+                <div class="list-group">
+                    <a href="#" class="list-group-item" id="lnkPropBagAdmin">Property Bag Admin</a>
+                    <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                    <a href="#" class="list-group-item">Morbi leo risus</a>
+                    <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                    <a href="#" class="list-group-item">Vestibulum at eros</a>
+                </div>
+            </div>
+        </div>
     </div>
-
-
-    <a href="#" id="lnkPropBagAdmin">Property Bag Admin</a>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/jquery/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
     <script src="scripts/popup.js"></script>
-
 </body>
 
 </html>
