--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
             width: 15%;
             background-color: #337ab7;
         }
+        
+        .navbar-brand.sp-admin {
+            height: 60px;
+        }
     </style>
 </head>
 
@@ -50,8 +54,8 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <div class="navbar-brand" href="#">
-                        <img alt="Brand" src="/images/icon-19.png">
+                    <div class="navbar-brand sp-admin" href="#">
+                        <img alt="Brand" src="/images/sharepoint-logotype-32.png">
                         <span>SharePoint Admin Panel</span>
                     </div>
 
@@ -63,7 +67,7 @@
                 <div class="list-group">
                     <a href="#" class="list-group-item sp-admin-option" id="lnkPropBagAdmin">
                         <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/icon-19.png">
+                            <img alt="Brand" src="/images/sp-bag-32.png">
                         </div>
                         <div class="sp-admin-option-title">
                             Property Bag Admin
@@ -71,7 +75,7 @@
                     </a>
                     <a href="#" class="list-group-item sp-admin-option">
                         <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/icon-19.png">
+                            <img alt="Brand" src="/images/sp-bag-32.png">
                         </div>
                         <div class="sp-admin-option-title">
                             Option 1
@@ -79,7 +83,7 @@
                     </a>
                     <a href="#" class="list-group-item sp-admin-option">
                         <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/icon-19.png">
+                            <img alt="Brand" src="/images/sp-bag-32.png">
                         </div>
                         <div class="sp-admin-option-title">
                             Option 2
@@ -87,7 +91,7 @@
                     </a>
                     <a href="#" class="list-group-item sp-admin-option">
                         <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/icon-19.png">
+                            <img alt="Brand" src="/images/sp-bag-32.png">
                         </div>
                         <div class="sp-admin-option-title">
                             Option 3
