--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <!-- Bootstrap -->
     <link href="styles/bundle.css" rel="stylesheet">
-    
 </head>
-
 <body>
     <div class="container">
         <nav class="navbar navbar-default">
@@ -60,8 +57,7 @@
             </div>
         </div>
     </div>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="scripts/vendorBundle.js"></script>
     <script src="scripts/popup.js"></script>
 </body>
 
