--- a/src/index.html
+++ b/src/index.html
@@ -6,56 +6,8 @@
     <link href="styles/bundle.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <div class="navbar-brand sp-admin" href="#">
-                        <img alt="Brand" src="/images/sharepoint-logotype-32.png">
-                        <span>SharePoint Admin Panel</span>
-                    </div>
-
-                </div>
-            </div>
-        </nav>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="list-group">
-                    <a href="#" class="list-group-item sp-admin-option" id="lnkPropBagAdmin">
-                        <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/sp-bag-32.png">
-                        </div>
-                        <div class="sp-admin-option-title">
-                            Property Bag Admin
-                        </div>
-                    </a>
-                    <a href="#" class="list-group-item sp-admin-option">
-                        <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/sp-bag-32.png">
-                        </div>
-                        <div class="sp-admin-option-title">
-                            Option 1
-                        </div>
-                    </a>
-                    <a href="#" class="list-group-item sp-admin-option">
-                        <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/sp-bag-32.png">
-                        </div>
-                        <div class="sp-admin-option-title">
-                            Option 2
-                        </div>
-                    </a>
-                    <a href="#" class="list-group-item sp-admin-option">
-                        <div class="sp-admin-option-image">
-                            <img alt="Brand" src="/images/sp-bag-32.png">
-                        </div>
-                        <div class="sp-admin-option-title">
-                            Option 3
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div id="popUpContent">
+        
     </div>
     <script src="scripts/vendorBundle.js"></script>
     <script src="scripts/popup.js"></script>
