Moved from bootstrap to to fabric UI

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <!--<link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/fabric-core/4.0.0/fabric.min.css" />-->
     <link href="styles/bundle.css" rel="stylesheet">
 </head>
 <body>
-    <div id="popUpContent">
-        
-    </div>
-    <script src="scripts/vendorBundle.js"></script>
+    <div id="popUpContent"></div>
     <script src="scripts/popup.js"></script>
 </body>
 
